# DitheringLib

./: .build.bat  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/dithering/: CMakeLists.txt  dithering.cpp
prj.lab/dithering/include/dithering/: Doxyfile  dithering.hpp
prj.test/: CMakeLists.txt  dithering_test.cpp
